# hermes-agent

./: .PR_DESCRIPTION.md  .aider.conf.yml  .build-metadata.schema.json  .claudeignore  .code-clone.md  .codex-pr-body.md  .codex_review.md  .codex_review_input.md  .commit_msg.txt  .coverage  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env.docker.example  .env.example  .env.production.example  .env.railway.example  .env.render.example  .env.sandbox  .env.sandbox.example  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .hermes-bootstrap-complete  .hermes.md  .hermesignore  .mailmap  .parity-state.json  .pr-body.md  .pr_agent.toml  .pre-commit-config.yaml  .reaction-feedback-research.md  .savegit.json  .secrets.baseline  0001-feat-windows-native-PowerShell-support-for-file-ops-.patch  50457-DISPOSITION-AND-STACKING.txt  ACP-UPSTREAM-REPRO.txt  (+822 more)
.ai/: implementation-summary.json
.beads/: interactions.jsonl  issues.jsonl  metadata.json  phase1-code-scan-completion-fix.md  phase2-d1-d3-evaluation-plan-corrections.md  phase2-d1-extract-imports.md  phase2-d2-code-scan-skill.md  phase2-d3-validation-gate-skill.md  phase2-d4-review-integration-deferred.md  phase3-d1-fingerprint-model.md  phase3-d2-incremental-scan.md  phase3-d3-assemble-graph.md  phase3-d4-skill-integration-deferred.md  phase4-d1-import-classification.md  phase4-d2-entrypoint-detection.md  phase4-d3-orphan-triage.md  phase4-d4-hub-ranking.md  phase4-d5-semantic-extraction.md  phase4-d6-delta-reporting.md  phase4-d7-scan-report-artifact.md  ua-tier1-001-static-signals-schema.md  ua-tier1-002-supabase-migration-markers.md  ua-tier1-003-edge-package-config-markers.md  ua-tier1-004-entrypoint-hotspot-refinement.md  ua-tier1-005-run-ua-report-integration.md
.claude/: launch.json  settings.json  settings.local.json
.codegraph/: daemon.pid
.codex/: config.toml  (+1 more)
bridges/jcode-native-hermes-tool/: Cargo.toml  README.md
bridges/jcode-native-hermes-tool/src/: lib.rs
control-plane/: .gitignore  README.md  config.example.yaml  integrations.example.yaml  pyproject.toml
control-plane/orchard/: __init__.py  api.py  cli.py  config.py  integrations.py  models.py  provisioner.py  registry.py  router.py  secrets.py  security.py  skills.py  supervisor.py  worker_daemon.py
control-plane/orchard/backends/: __init__.py  base.py  docker.py  local.py
control-plane/orchard/ingress/: __init__.py  base.py  cli.py  mattermost.py
control-plane/orchard/web/: index.html
control-plane/orchard/worker_bin/: orchard-fetch
control-plane/scripts/: demo.config.yaml  demo_local.sh  serve_cli.sh  worker_shell.sh  worker_tui.sh
control-plane/skills-base/github/: SKILL.md
control-plane/skills-base/weather-demo/: SKILL.md
control-plane/tests/: test_integrations.py  test_provisioner.py  test_registry.py  test_router.py  test_secrets.py  test_supervisor.py
cosmos_contribution/Cosmos/agent-vault/sdk-python/: pyproject.toml
cosmos_contribution/Cosmos/agent-vault/sdk-python/dropclaw/: __init__.py  client.py  compression.py  crypto.py  skill_file.py
model_router/: .gitignore  Makefile  README.md  analyze_telemetry.py  justfile  log_router_feedback.py  model_router.py  propose_config_patch.py  pyproject.toml  route_cli.py  router_config.yaml  suggest_router_changes.py  suggest_router_changes_v2.py  telemetry.py  validate_router_config.py
model_router/scripts/: demo_workflow.py
model_router/tests/: test_analyze_telemetry.py  test_demo_workflow.py  test_log_router_feedback.py  test_model_router.py  test_policy_flow_e2e.py  test_propose_config_patch.py  test_route_cli.py  test_scaffold.py  test_suggest_router_changes.py  test_suggest_router_changes_v2.py  test_telemetry.py  test_validate_router_config.py
native/windows-sandbox-wrapper/: Cargo.toml
optional-skills/security/security-recon-assistant/: .gitignore  Makefile  README.md  SKILL.md  pyproject.toml  test_imports.py
optional-skills/security/security-recon-assistant/scripts/: install_deps.sh  run_tests.sh
optional-skills/security/security-recon-assistant/security_recon_assistant/: cli.py
optional-skills/security/security-recon-assistant/security_recon_assistant/core/: cache.py  dependencies.py  executor.py  guardian.py  models.py  scope.py
optional-skills/security/security-recon-assistant/security_recon_assistant/orchestrator/: pipeline.py
optional-skills/security/security-recon-assistant/security_recon_assistant/reporting/: __init__.py  html_report.py  json_report.py  markdown_report.py
optional-skills/security/security-recon-assistant/security_recon_assistant/scanners/: __init__.py  base.py  ffuf_scanner.py  gowitness_scanner.py  nmap_scanner.py  nuclei_scanner.py  sslscan_scanner.py  subfinder_scanner.py  whatweb_scanner.py
optional-skills/security/security-recon-assistant/security_recon_assistant/templates/: scope.example.yaml
optional-skills/security/security-recon-assistant/tests/: __init__.py  conftest.py  test_cli.py  test_edge_cases.py  test_orchestrator.py  test_reporting.py  test_scanners.py  test_scope_guardian.py
tests/code_scan/fixtures/static_signals_rust_agent_infra/: Cargo.toml
tests/code_scan/fixtures/static_signals_rust_agent_infra/.github/workflows/: ci.yml
tests/code_scan/fixtures/static_signals_rust_agent_infra/docs/: ROBOT_MODE.md  SECURITY_AUDIT_REPORT.md
tests/code_scan/fixtures/static_signals_rust_agent_infra/src/connectors/: hermes.rs
tests/code_scan/fixtures/static_signals_rust_agent_infra/src/daemon/: models.rs
tests/code_scan/fixtures/static_signals_rust_agent_infra/src/search/: pack_planner.rs
tests/code_scan/fixtures/static_signals_rust_agent_infra/src/sources/: sync.rs
tests/scripts/canary/isolated_passkey_runtime/: pyproject.toml  runtime_contract_suite.py
trendscout/: main.py  pyproject.toml
trendscout/config/: config.yaml  subreddits.txt  urls.txt
trendscout/tests/: test_config.py  test_firecrawl_url.py  test_idempotency.py
trendscout/trendscout/: clustering.py  config.py  db.py  digest.py  firecrawl_client.py  firecrawl_ingest.py  reddit_ingest.py  scoring.py  social_trends.py
(+37735 files in other folders)
