[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepparser"
version = "1.0.0"
description = "Parse DWG, Excel-embedded PDFs, and scanned tables without OCR soup"
readme = "deepparser/README.md"
requires-python = ">=3.11"
authors = [{ name = "Sean Yang", email = "ysh145@gmail.com" }]
license = { text = "MIT" }
keywords = ["document-parsing", "pdf", "dwg", "excel", "rag", "ai", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.28.0,<1",
  "pydantic>=2.0.0,<3",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.115.0,<1",
  "uvicorn[standard]>=0.34.0,<1",
  "aiosqlite>=0.20.0,<1",
  "python-multipart>=0.0.18,<1",
  "python-json-logger>=3.2.1,<4",
  "aiofiles>=24.1.0,<25",
]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=0.25.0",
  "respx>=0.22.0",
]

[project.scripts]
deepparser-server = "deepparser_api.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepparser_api*", "deepparser*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests (skipped in CI)"]
