[project]
name = "hermes-orchard"
version = "0.1.0"
description = "Multi-tenant control-plane for Hermes Agent: provisions per-employee isolated agents, locks them down, and wakes them on demand behind a single Mattermost bot."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "aiohttp>=3.10",   # Mattermost REST + WebSocket ingress
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
orchard = "orchard.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchard*"]

[tool.setuptools.package-data]
orchard = ["web/*.html", "worker_bin/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
