[project]
name = "trendscout"
version = "0.1.0"
description = "Trend detection and emergence scoring for social media and news sources"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
trendscout = [
    "chromadb>=0.4",
    "spacy>=3.7",
]
chromadb = ["chromadb>=0.4"]
spacy = ["spacy>=3.7"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["trendscout*"]
